Fixed horizontal scroll and implement button states

--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
   background-color: #f7f7f9;
   background-image: url(image/header-background-mobile\ 2.png);
   background-repeat: no-repeat;
-  overflow-x: hidden;
+  overflow-x: hidden !important;
 }
 
 .container1 {
@@ -27,6 +27,7 @@ body {
   max-width: 620px;
   border-radius: 8px;
   top: 10px;
+  overflow-x: hidden !important;
 }
 
 .Toolbar {
@@ -135,6 +136,7 @@ h1 {
   border-radius: 2%;
   background-color: #fff;
   background-size: cover;
+  overflow-x: hidden !important;
 }
 
 .Container2 .Snapshoot1 {
@@ -333,6 +335,7 @@ h1 {
   border-radius: 2%;
   background-color: #fff;
   background-size: cover;
+  overflow-x: hidden !important;
 }
 
 .Container3 .Snapshoot1 {
@@ -524,6 +527,7 @@ h1 {
   max-width: 620px;
   border-radius: 2%;
   background-color: #fff;
+  overflow-x: hidden !important;
 }
 
 .Container4 .Snapshoot1 {
@@ -714,6 +718,7 @@ h1 {
   max-width: 620px;
   border-radius: 2%;
   background-color: #fff;
+  overflow-x: hidden !important;
 }
 
 .Container5 .Snapshoot1 {
@@ -913,6 +918,7 @@ h1 {
   align-content: center;
   background-color: #fff;
   background-size: cover;
+  overflow: hidden;
 }
 
 .Top-Sec {
@@ -1132,14 +1138,13 @@ h1 {
   align-items: center;
   position: absolute;
   width: 100%;
-  max-width: 620px;
   top: 252rem;
   height: 44rem;
   background-image: url(image/contact\ form\ shapes-mobile.png);
   background-color: #396df2;
   background-repeat: no-repeat;
   background-size: cover;
-  overflow: hidden;
+  overflow-x: hidden !important;
   border-top-left-radius: 10%;
   margin: 0 auto;
   padding: 1em;
@@ -1287,6 +1292,8 @@ h1 {
 .btn:active {
   opacity: 1;
   color: #fff;
-  background-color: #789bf2;
-  border: 1px solid #6070ff;
+}
+
+.btn:focus {
+  color: #fff;
 }
